tests/sources/invalid/syntax/syntax_comprehensive.fire
// Comprehensive syntax error tests
// These should all produce parser/lexer errors

// Missing semicolons
int32 a = 5
int32 b = 10;  //~ ERROR FS-PARSE-0010 @1

// Unclosed parenthesis
int32 x = (5 + 3;  //~ ERROR FS-PARSE-0010 @17

// Unclosed array literal
int32[] arr = [1, 2, 3;  //~ ERROR FS-PARSE-0010 @23
//~^ ERROR FS-PARSE-0010 @23

// Missing condition parentheses in if
if x > 5 {  //~ ERROR FS-PARSE-0010 @4
    println("test");  //~ ERROR FS-PARSE-0012 @5
}

// Missing condition in while
while {  //~ ERROR FS-PARSE-0010 @7
    println("test");  //~ ERROR FS-PARSE-0012 @5
}

// Invalid tokens
@#$%  //~ ERROR FS-PARSE-0012 @2

// Missing block braces
if (true)
    int32 y = 5;

// Unclosed string literal
string s = "hello;

// Invalid array type syntax
int32[ bad_arr = 5;

// Dangling else
else {
    println("orphan else");  //~ ERROR FS-PARSE-0010 @14
}

// Missing function body
void test();

// Invalid function syntax - missing parens
void badFunc {
    println("test");
}

// Missing closing brace
void unclosed() {  //~ ERROR FS-PARSE-0010 @17
    int32 z = 10;
